New scrolling, single footer

--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
             </div>
             <nav>
                 <ul>
-                    <li><a onclick="document.body.style.transform = 'translateY(-100%)'; document.body.style.transition = '1s';">How it works</a></li>
-                    <li><a onclick="document.body.style.transform = 'translateY(-200%)'; document.body.style.transition = '1.5s';">Pricing</a></li>
-                    <li><a onclick="document.body.style.transform = 'translateY(-300%)'; document.body.style.transition = '2s';">Free trial</a></li>
+                    <li><a onclick="smoothScroll(1)">How it works</a></li>
+                    <li><a onclick="smoothScroll(2)">Pricing</a></li>
+                    <li><a onclick="smoothScroll(3)">Free trial</a></li>
                 </ul> 
             </nav>
         </header>
@@ -31,9 +31,6 @@
             <p></p>
             <img src="imgs/logo.png"></img>
         </main>
-        <footer>
-            <p>&copy; Copyright 2024 Dawid Zyś ZSTI</p>
-        </footer>
     </section>
     <section>
         <main>
@@ -41,23 +38,15 @@
             <video autoplay muted loop>
                 <source src="bg.mp4" type="video/mp4">
             </video>
-            <img src="imgs/arrow.png" onclick="document.body.style.transform = 'translateY(0%)';"></img>
         </main>
-        <footer>
-            <p>&copy; Copyright 2024 Dawid Zyś ZSTI</p>
-        </footer>
     </section>
     <section>
         <main>
-            <img src="imgs/arrow.png" onclick="document.body.style.transform = 'translateY(0%)';"></img>
             <video autoplay muted loop>
                 <source src="bg.mp4" type="video/mp4">
             </video>
             <aside></aside>
         </main>
-        <footer>
-            <p>&copy; Copyright 2024 Dawid Zyś ZSTI</p>
-        </footer>
     </section>
     <section>
         <main>
@@ -65,7 +54,6 @@
             <video autoplay muted loop>
                 <source src="bg.mp4" type="video/mp4">
             </video>
-            <img src="imgs/arrow.png" onclick="document.body.style.transform = 'translateY(0%)';"></img>
         </main>
         <footer>
             <p>&copy; Copyright 2024 Dawid Zyś ZSTI</p>
