--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
             </div>
             <nav>
                 <ul>
-                    <li><a onclick="smoothScroll(1)">How it works</a></li>
-                    <li><a onclick="smoothScroll(2)">Pricing</a></li>
-                    <li><a onclick="smoothScroll(3)">Free trial</a></li>
+                    <li><a onclick="linkScroll(100)">How it works</a></li>
+                    <li><a onclick="linkScroll(200)">Pricing</a></li>
+                    <li><a onclick="linkScroll(300)">Free trial</a></li>
                 </ul> 
             </nav>
         </header>
