Vids folder, bg video, new scroll effect, some css cleanup

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <script defer src="main.js"></script>
 </head>
 <body>
+    <video autoplay muted loop>
+        <source src="vids/bg.mp4" type="video/mp4">
+    </video>
     <img id="return" src="imgs/arrow.png"></img>
     <div id="sectionContainer">
         <section>
@@ -26,7 +29,7 @@
             </header>
             <main>
                 <video autoplay muted loop>
-                    <source src="bg.mp4" type="video/mp4">
+                    <source src="vids/bg_home.mp4" type="video/mp4">
                 </video>
                 <h1>Checkm8</h1>
                 <hr>
@@ -38,14 +41,14 @@
             <main>
                 <aside></aside>
                 <video autoplay muted loop>
-                    <source src="bg.mp4" type="video/mp4">
+                    <source src="vids/bg_home.mp4" type="video/mp4">
                 </video>
             </main>
         </section>
         <section>
             <main>
                 <video autoplay muted loop>
-                    <source src="bg.mp4" type="video/mp4">
+                    <source src="vids/bg_home.mp4" type="video/mp4">
                 </video>
                 <aside></aside>
             </main>
@@ -54,7 +57,7 @@
             <main>
                 <aside></aside>
                 <video autoplay muted loop>
-                    <source src="bg.mp4" type="video/mp4">
+                    <source src="vids/bg_home.mp4" type="video/mp4">
                 </video>
             </main>
             <footer>
