Single footer, new vid

--- a/index.html
+++ b/index.html
@@ -29,40 +29,37 @@
             </header>
             <main>
                 <video autoplay muted loop>
-                    <source src="vids/bg_home.mp4" type="video/mp4">
+                    <source src="vids/home.mp4" type="video/mp4">
                 </video>
                 <h1>Checkm8</h1>
                 <hr>
                 <p></p>
                 <img  id="theme" src="imgs/logo.png"></img>
             </main>
-        </section>
-        <section>
-            <main>
-                <aside></aside>
-                <video autoplay muted loop>
-                    <source src="vids/bg_home.mp4" type="video/mp4">
-                </video>
-            </main>
-        </section>
-        <section>
-            <main>
-                <video autoplay muted loop>
-                    <source src="vids/bg_home.mp4" type="video/mp4">
-                </video>
-                <aside></aside>
-            </main>
-        </section>
-        <section>
-            <main>
-                <aside></aside>
-                <video autoplay muted loop>
-                    <source src="vids/bg_home.mp4" type="video/mp4">
-                </video>
-            </main>
             <footer>
                 <p>&copy; Copyright 2024 Dawid Zyś ZSTI</p>
             </footer>
+        </section>
+        <section>
+            <main>
+                <video autoplay muted loop>
+                    <source src="vids/how_it_works.mp4" type="video/mp4">
+                </video>
+            </main>
+        </section>
+        <section>
+            <main>
+                <video autoplay muted loop>
+                    <source src="vids/home.mp4" type="video/mp4">
+                </video>
+            </main>
+        </section>
+        <section>
+            <main>
+                <video autoplay muted loop>
+                    <source src="vids/how_it_works.mp4" type="video/mp4">
+                </video>
+            </main>
         </section>
     </div>
 </body>
