Extra ui, creating 2nd section, color corrections

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <title>Checkm8</title>
-    <link rel="icon" type="image/x-icon" href="/imgs/favicon.ico">
+    <link rel="icon" type="image/png" href="/imgs/logo.png">
     <link rel="stylesheet" href="style.css"></link>
     <script defer src="main.js"></script>
 </head>
@@ -13,6 +13,9 @@
     <img id="return" src="imgs/arrow.png"></img>
     <div id="sectionContainer">
         <section>
+            <video autoplay muted loop>
+                <source src="vids/home.mp4" type="video/mp4">
+            </video>
             <header>
                 <div id="hamburger">
                     <span></span>
@@ -21,16 +24,14 @@
                 </div>
                 <nav>
                     <ul>
-                        <li><a onclick="linkScroll(100)">How it works</a></li>
+                        <li><a onclick="linkScroll(100)">How It Works</a></li>
                         <li><a onclick="linkScroll(200)">Pricing</a></li>
-                        <li><a onclick="linkScroll(300)">Free trial</a></li>
+                        <li><a onclick="linkScroll(300)">Free Trial</a></li>
                     </ul> 
                 </nav>
             </header>
             <main>
-                <video autoplay muted loop>
-                    <source src="vids/home.mp4" type="video/mp4">
-                </video>
+                <b>00</b>
                 <h1>Checkm8</h1>
                 <hr>
                 <p></p>
@@ -41,25 +42,33 @@
             </footer>
         </section>
         <section>
+            <video autoplay muted loop>
+                <source src="vids/how_it_works.mp4" type="video/mp4">
+            </video>
+            <i>How It Works</i>
+            <b>01</b>
+            <h2>Introduction</h2>
             <main>
-                <video autoplay muted loop>
-                    <source src="vids/how_it_works.mp4" type="video/mp4">
-                </video>
+                <img></img>
+                <div></div>
+                <div></div>
+                <div></div>
+                <img></img>
             </main>
         </section>
         <section>
-            <main>
-                <video autoplay muted loop>
-                    <source src="vids/home.mp4" type="video/mp4">
-                </video>
-            </main>
+            <video autoplay muted loop>
+                <source src="vids/home.mp4" type="video/mp4">
+            </video>
+            <i>Pricing</i>
+            <b>02</b>
         </section>
         <section>
-            <main>
-                <video autoplay muted loop>
-                    <source src="vids/how_it_works.mp4" type="video/mp4">
-                </video>
-            </main>
+            <video autoplay muted loop>
+                <source src="vids/how_it_works.mp4" type="video/mp4">
+            </video>
+            <i>Free Trial</i>
+            <b>03</b>
         </section>
     </div>
 </body>
