Base for carousel added

--- a/index.html
+++ b/index.html
@@ -49,11 +49,24 @@
             <b>01</b>
             <h2>Introduction</h2>
             <main>
-                <img></img>
-                <div></div>
-                <div></div>
-                <div></div>
-                <img></img>
+                <img src="imgs/arrow_mini_left.png" class="navigation"></img>
+                <div>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur illum temporibus sed esse alias magni, dolorem natus quasi, laboriosam saepe nihil expedita excepturi nulla sunt adipisci possimus ipsam in facere debitis ut tenetur repudiandae harum quae aut. Esse facere, ad quos nobis, ullam, dolores vel nulla nisi placeat ut quod!</p>
+                    <img src="https://wiki.dave.eu/images/4/47/Placeholder.png"></img>
+                </div>
+                <div>
+                    <img src="https://wiki.dave.eu/images/4/47/Placeholder.png"></img>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque a alias iusto iste. Temporibus quae aperiam nemo ab eveniet similique itaque sit earum quibusdam cupiditate id fuga, adipisci sed provident dignissimos dolore ipsum, suscipit debitis esse laborum tempora, totam expedita excepturi dolorem? Facere quae est voluptatem consequatur, voluptatum necessitatibus eum?</p>
+                </div>
+                <div>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit, ut. Necessitatibus unde quos harum blanditiis cum, et consectetur ipsum repudiandae? Natus voluptatibus magnam odio error nisi quasi blanditiis veritatis expedita incidunt vitae. Alias sint porro cum fugit blanditiis ducimus ut ipsam sed nobis. Ducimus placeat repellat laboriosam, odit quasi commodi!</p>
+                    <img src="https://wiki.dave.eu/images/4/47/Placeholder.png"></img>
+                </div>
+                <div>
+                    <img src="https://wiki.dave.eu/images/4/47/Placeholder.png"></img>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus error magnam, veritatis perspiciatis corrupti reiciendis. Natus est ipsa cum mollitia nemo quidem consequuntur fugiat porro. Molestias, facere. Alias, accusantium dolores nisi aperiam suscipit, minima dicta harum corrupti quae maiores at quos quisquam labore, voluptatibus sed aspernatur dolor voluptatem ea eligendi.</p>
+                </div>
+                <img src="imgs/arrow_mini_right.png" class="navigation"></img>
             </main>
         </section>
         <section>
