--- a/index.html
+++ b/index.html
@@ -2,12 +2,13 @@
 <html lang="en">
 <head>
     <title>Checkm8</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/png" href="/imgs/logo.png">
     <link rel="stylesheet" href="style.css"></link>
     <script defer src="main.js"></script>
 </head>
 <body>
-    <video autoplay muted loop>
+    <video defer autoplay muted loop>
         <source src="vids/bg.mp4" type="video/mp4">
     </video>
     <img id="return" src="imgs/arrow.png"></img>
@@ -42,7 +43,7 @@
             </footer>
         </section>
         <section>
-            <video autoplay muted loop>
+            <video defer autoplay muted loop>
                 <source src="vids/how_it_works.mp4" type="video/mp4">
             </video>
             <i>How It Works</i>
@@ -70,14 +71,14 @@
             </main>
         </section>
         <section>
-            <video autoplay muted loop>
+            <video defer autoplay muted loop>
                 <source src="vids/home.mp4" type="video/mp4">
             </video>
             <i>Pricing</i>
             <b>02</b>
         </section>
         <section>
-            <video autoplay muted loop>
+            <video defer autoplay muted loop>
                 <source src="vids/how_it_works.mp4" type="video/mp4">
             </video>
             <i>Free Trial</i>
