--- a/index.html
+++ b/index.html
@@ -3,20 +3,14 @@
 <head>
     <title>Checkm8</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/png" href="/imgs/logo.png">
+    <link rel="icon" type="image/png" href="imgs/logo.webp">
     <link rel="stylesheet" href="style.css"></link>
     <script defer src="main.js"></script>
 </head>
 <body>
-    <video defer autoplay muted loop>
-        <source src="vids/bg.mp4" type="video/mp4">
-    </video>
-    <img id="return" src="imgs/arrow.png"></img>
     <div id="sectionContainer">
         <section>
-            <video autoplay muted loop>
-                <source src="vids/home.mp4" type="video/mp4">
-            </video>
+            <video src="vids/home.mp4" autoplay muted loop></video>
             <header>
                 <div id="hamburger">
                     <span></span>
@@ -36,54 +30,50 @@
                 <h1>Checkm8</h1>
                 <hr>
                 <p></p>
-                <img  id="theme" src="imgs/logo.png"></img>
+                <img src="imgs/logo.webp" alt="logo" id="theme"></img>
             </main>
             <footer>
                 <p>&copy; Copyright 2024 Dawid Zyś ZSTI</p>
             </footer>
         </section>
         <section>
-            <video defer autoplay muted loop>
-                <source src="vids/how_it_works.mp4" type="video/mp4">
-            </video>
+            <video src="vids/how_it_works.mp4" autoplay muted loop loading="lazy"></video>
             <i>How It Works</i>
             <b>01</b>
             <h2>Introduction</h2>
             <main>
-                <img src="imgs/arrow_mini_left.png" class="navigation"></img>
+                <img src="imgs/arrow_mini_left.webp" alt="arrow_mini_left" class="navigation"></img>
                 <div>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur illum temporibus sed esse alias magni, dolorem natus quasi, laboriosam saepe nihil expedita excepturi nulla sunt adipisci possimus ipsam in facere debitis ut tenetur repudiandae harum quae aut. Esse facere, ad quos nobis, ullam, dolores vel nulla nisi placeat ut quod!</p>
-                    <img src="https://wiki.dave.eu/images/4/47/Placeholder.png"></img>
+                    <img src="imgs/placeholder.webp" alt="placeholder"></img>
                 </div>
                 <div>
-                    <img src="https://wiki.dave.eu/images/4/47/Placeholder.png"></img>
+                    <img src="imgs/placeholder.webp" alt="placeholder"></img>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque a alias iusto iste. Temporibus quae aperiam nemo ab eveniet similique itaque sit earum quibusdam cupiditate id fuga, adipisci sed provident dignissimos dolore ipsum, suscipit debitis esse laborum tempora, totam expedita excepturi dolorem? Facere quae est voluptatem consequatur, voluptatum necessitatibus eum?</p>
                 </div>
                 <div>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit, ut. Necessitatibus unde quos harum blanditiis cum, et consectetur ipsum repudiandae? Natus voluptatibus magnam odio error nisi quasi blanditiis veritatis expedita incidunt vitae. Alias sint porro cum fugit blanditiis ducimus ut ipsam sed nobis. Ducimus placeat repellat laboriosam, odit quasi commodi!</p>
-                    <img src="https://wiki.dave.eu/images/4/47/Placeholder.png"></img>
+                    <img src="imgs/placeholder.webp" alt="placeholder"></img>
                 </div>
                 <div>
-                    <img src="https://wiki.dave.eu/images/4/47/Placeholder.png"></img>
+                    <img src="imgs/placeholder.webp" alt="placeholder"></img>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus error magnam, veritatis perspiciatis corrupti reiciendis. Natus est ipsa cum mollitia nemo quidem consequuntur fugiat porro. Molestias, facere. Alias, accusantium dolores nisi aperiam suscipit, minima dicta harum corrupti quae maiores at quos quisquam labore, voluptatibus sed aspernatur dolor voluptatem ea eligendi.</p>
                 </div>
-                <img src="imgs/arrow_mini_right.png" class="navigation"></img>
+                <img src="imgs/arrow_mini_right.webp" alt="arrow_mini_right" class="navigation"></img>
             </main>
         </section>
         <section>
-            <video defer autoplay muted loop>
-                <source src="vids/home.mp4" type="video/mp4">
-            </video>
+            <video src="vids/home.mp4" autoplay muted loop loading="lazy"></video>
             <i>Pricing</i>
             <b>02</b>
         </section>
         <section>
-            <video defer autoplay muted loop>
-                <source src="vids/how_it_works.mp4" type="video/mp4">
-            </video>
+            <video src="vids/how_it_works.mp4" autoplay muted loop loading="lazy"></video>
             <i>Free Trial</i>
             <b>03</b>
         </section>
     </div>
+    <img src="imgs/arrow.webp" alt="arrow" id="return" ></img>
+    <video src="vids/bg.mp4" autoplay muted loop loading="lazy"></video>
 </body>
 </html>
