--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div id="sectionContainer">
         <section>
-            <video src="vids/home.mp4" autoplay muted loop></video>
+            <video src="vids/home.webm" autoplay muted loop></video>
             <header>
                 <div id="hamburger">
                     <span></span>
@@ -37,7 +37,7 @@
             </footer>
         </section>
         <section>
-            <video src="vids/how_it_works.mp4" autoplay muted loop loading="lazy"></video>
+            <video src="vids/how_it_works.webm" autoplay muted loop loading="lazy"></video>
             <i>How It Works</i>
             <b>01</b>
             <h2>Introduction</h2>
@@ -63,17 +63,17 @@
             </main>
         </section>
         <section>
-            <video src="vids/home.mp4" autoplay muted loop loading="lazy"></video>
+            <video src="vids/home.webm" autoplay muted loop loading="lazy"></video>
             <i>Pricing</i>
             <b>02</b>
         </section>
         <section>
-            <video src="vids/how_it_works.mp4" autoplay muted loop loading="lazy"></video>
+            <video src="vids/how_it_works.webm" autoplay muted loop loading="lazy"></video>
             <i>Free Trial</i>
             <b>03</b>
         </section>
     </div>
     <img src="imgs/arrow.webp" alt="arrow" id="return" ></img>
-    <video src="vids/bg.mp4" autoplay muted loop loading="lazy"></video>
+    <video src="vids/bg.webm" autoplay muted loop loading="lazy"></video>
 </body>
 </html>
