No more videos = no more lags

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div id="sectionContainer">
         <section>
-            <video src="vids/home.webm" autoplay muted loop></video>
+            <video src="home.webm" autoplay muted loop></video>
             <header>
                 <div id="hamburger">
                     <span></span>
@@ -27,17 +27,19 @@
             </header>
             <main>
                 <b>00</b>
-                <h1>Checkm8</h1>
+                <div>
+                    <img src="imgs/logo.webp" alt="logo" class="logo"></img>
+                    <h1>Checkm8</h1>
+                    <img src="imgs/logo.webp" alt="logo" class="logo"></img>
+                </div>
                 <hr>
                 <p></p>
-                <img src="imgs/logo.webp" alt="logo" id="theme"></img>
             </main>
             <footer>
                 <p>&copy; Copyright 2024 Dawid Zyś ZSTI</p>
             </footer>
         </section>
         <section>
-            <video src="vids/how_it_works.webm" autoplay muted loop loading="lazy"></video>
             <i>How It Works</i>
             <b>01</b>
             <h2>Introduction</h2>
@@ -63,17 +65,14 @@
             </main>
         </section>
         <section>
-            <video src="vids/home.webm" autoplay muted loop loading="lazy"></video>
             <i>Pricing</i>
             <b>02</b>
         </section>
         <section>
-            <video src="vids/how_it_works.webm" autoplay muted loop loading="lazy"></video>
             <i>Free Trial</i>
             <b>03</b>
         </section>
     </div>
-    <img src="imgs/arrow.webp" alt="arrow" id="return" ></img>
-    <video src="vids/bg.webm" autoplay muted loop loading="lazy"></video>
+    <img src="imgs/arrow.webp" alt="arrow" id="return"></img>
 </body>
 </html>
