How it works redesign, css fixes

--- a/index.html
+++ b/index.html
@@ -42,27 +42,28 @@
         <section>
             <i>How It Works</i>
             <b>01</b>
-            <h2>Introduction</h2>
-            <main>
-                <img src="imgs/arrow_mini_left.webp" alt="arrow_mini_left" class="navigation"></img>
-                <div>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur illum temporibus sed esse alias magni, dolorem natus quasi, laboriosam saepe nihil expedita excepturi nulla sunt adipisci possimus ipsam in facere debitis ut tenetur repudiandae harum quae aut. Esse facere, ad quos nobis, ullam, dolores vel nulla nisi placeat ut quod!</p>
-                    <img src="imgs/placeholder.webp" alt="placeholder"></img>
-                </div>
-                <div>
-                    <img src="imgs/placeholder.webp" alt="placeholder"></img>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque a alias iusto iste. Temporibus quae aperiam nemo ab eveniet similique itaque sit earum quibusdam cupiditate id fuga, adipisci sed provident dignissimos dolore ipsum, suscipit debitis esse laborum tempora, totam expedita excepturi dolorem? Facere quae est voluptatem consequatur, voluptatum necessitatibus eum?</p>
-                </div>
-                <div>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit, ut. Necessitatibus unde quos harum blanditiis cum, et consectetur ipsum repudiandae? Natus voluptatibus magnam odio error nisi quasi blanditiis veritatis expedita incidunt vitae. Alias sint porro cum fugit blanditiis ducimus ut ipsam sed nobis. Ducimus placeat repellat laboriosam, odit quasi commodi!</p>
-                    <img src="imgs/placeholder.webp" alt="placeholder"></img>
-                </div>
-                <div>
-                    <img src="imgs/placeholder.webp" alt="placeholder"></img>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus error magnam, veritatis perspiciatis corrupti reiciendis. Natus est ipsa cum mollitia nemo quidem consequuntur fugiat porro. Molestias, facere. Alias, accusantium dolores nisi aperiam suscipit, minima dicta harum corrupti quae maiores at quos quisquam labore, voluptatibus sed aspernatur dolor voluptatem ea eligendi.</p>
-                </div>
-                <img src="imgs/arrow_mini_right.webp" alt="arrow_mini_right" class="navigation"></img>
-            </main>
+            <img src="imgs/arrow_mini_left.webp" alt="arrow_mini_left" class="navigation"></img>
+            <div>
+                <h2>Introduction</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam maxime commodi vitae consectetur quis, sint laborum consequuntur, aliquid vel nulla dolore ex nobis molestias rem dolores repudiandae similique, at magni expedita earum tempore tenetur odio blanditiis! Ipsum nisi aliquid, reprehenderit, aliquam sit eligendi dolore eos a unde, aspernatur magnam cupiditate.</p>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Illum, nemo! Officiis culpa provident neque assumenda? Minus, dolores ullam. Illum ab ex vel nostrum non rerum officiis fugiat soluta totam minima.</p>
+            </div>
+            <div>
+                <h2>Technology Overview</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet, odit? Laudantium, facere aspernatur. Obcaecati, aut? Quod ut mollitia eligendi nihil enim commodi rem est accusamus voluptates eum! Labore aspernatur quae blanditiis quo reiciendis, incidunt voluptates eum iusto sint ab dolores, animi officia fugit soluta beatae rerum! Maiores autem nemo earum!</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore, quaerat possimus inventore rem deleniti non iste quibusdam praesentium sed dolorem esse nulla, pariatur, tenetur illo natus quod eos perspiciatis maiores!</p>
+            </div>
+            <div>
+                <h2>User Interaction</h2>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Animi architecto quidem aut, placeat ratione, quaerat sunt velit necessitatibus recusandae voluptate perspiciatis atque omnis consectetur illo voluptatum provident facere vel, suscipit dignissimos! Quas, esse nulla molestiae incidunt earum non quis blanditiis animi, itaque illum laudantium quidem exercitationem repellat fugit accusantium sint!</p>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vitae, ullam rem explicabo quod voluptate ipsam natus quibusdam ipsa dolores quaerat nisi, laudantium doloremque nostrum impedit. Est qui neque ad earum!</p>
+            </div>
+            <span>
+                <img src="imgs/placeholder.webp" alt="placeholder"></img>
+                <img src="imgs/placeholder.webp" alt="placeholder"></img>
+                <img src="imgs/placeholder.webp" alt="placeholder"></img>
+            </span>
+            <img src="imgs/arrow_mini_right.webp" alt="arrow_mini_right" class="navigation"></img>
         </section>
         <section>
             <i>Pricing</i>
