Hamburger fix, code cleanup, carousel images

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script defer src="main.js"></script>
 </head>
 <body>
-    <div id="sectionContainer">
+    <div id="sectionBox">
         <section>
             <video src="home.webm" autoplay muted loop></video>
             <header>
@@ -42,28 +42,28 @@
         <section>
             <i>How It Works</i>
             <b>01</b>
-            <img src="imgs/arrow_mini_left.webp" alt="arrow_mini_left" class="navigation"></img>
-            <div>
+            <img src="imgs/arrow_mini_left.webp" alt="arrow_mini_left" class="navigation left"></img>
+            <div class="carousel-item">
                 <h2>Introduction</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam maxime commodi vitae consectetur quis, sint laborum consequuntur, aliquid vel nulla dolore ex nobis molestias rem dolores repudiandae similique, at magni expedita earum tempore tenetur odio blanditiis! Ipsum nisi aliquid, reprehenderit, aliquam sit eligendi dolore eos a unde, aspernatur magnam cupiditate.</p>
                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Illum, nemo! Officiis culpa provident neque assumenda? Minus, dolores ullam. Illum ab ex vel nostrum non rerum officiis fugiat soluta totam minima.</p>
             </div>
-            <div>
+            <div class="carousel-item">
                 <h2>Technology Overview</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet, odit? Laudantium, facere aspernatur. Obcaecati, aut? Quod ut mollitia eligendi nihil enim commodi rem est accusamus voluptates eum! Labore aspernatur quae blanditiis quo reiciendis, incidunt voluptates eum iusto sint ab dolores, animi officia fugit soluta beatae rerum! Maiores autem nemo earum!</p>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore, quaerat possimus inventore rem deleniti non iste quibusdam praesentium sed dolorem esse nulla, pariatur, tenetur illo natus quod eos perspiciatis maiores!</p>
             </div>
-            <div>
+            <div class="carousel-item">
                 <h2>User Interaction</h2>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Animi architecto quidem aut, placeat ratione, quaerat sunt velit necessitatibus recusandae voluptate perspiciatis atque omnis consectetur illo voluptatum provident facere vel, suscipit dignissimos! Quas, esse nulla molestiae incidunt earum non quis blanditiis animi, itaque illum laudantium quidem exercitationem repellat fugit accusantium sint!</p>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Animi architecto quidem aut, placeat ratione, quaerat sunt velit necessitatibus recusandae voluptate perspiciatis atque omnis consectetur illo voluptatum provident facere vel, suscipit dignissimos! Quas, esse nulla molestiae incidunt earum non quis blanditiis animi, itaque illum laudantium quidem exercitationem  sint!</p>
                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vitae, ullam rem explicabo quod voluptate ipsam natus quibusdam ipsa dolores quaerat nisi, laudantium doloremque nostrum impedit. Est qui neque ad earum!</p>
             </div>
             <span>
-                <img src="imgs/placeholder.webp" alt="placeholder"></img>
-                <img src="imgs/placeholder.webp" alt="placeholder"></img>
-                <img src="imgs/placeholder.webp" alt="placeholder"></img>
+                <img src="imgs/carousel_img_1.webp" alt="placeholder" class="carousel-img"></img>
+                <img src="imgs/carousel_img_2.webp" alt="placeholder" class="carousel-img"></img>
+                <img src="imgs/carousel_img_3.webp" alt="placeholder" class="carousel-img"></img>
             </span>
-            <img src="imgs/arrow_mini_right.webp" alt="arrow_mini_right" class="navigation"></img>
+            <img src="imgs/arrow_mini_right.webp" alt="arrow_mini_right" class="navigation right"></img>
         </section>
         <section>
             <i>Pricing</i>
