--- a/index.html
+++ b/index.html
@@ -55,13 +55,13 @@
             </div>
             <div class="carousel-item">
                 <h2>User Interaction</h2>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Animi architecto quidem aut, placeat ratione, quaerat sunt velit necessitatibus recusandae voluptate perspiciatis atque omnis consectetur illo voluptatum provident facere vel, suscipit dignissimos! Quas, esse nulla molestiae incidunt earum non quis blanditiis animi, itaque illum laudantium quidem exercitationem  sint!</p>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Animi architecto quidem aut, placeat ratione, quaerat sunt velit necessitatibus recusandae voluptate perspiciatis atque omnis consectetur illo voluptatum provident facere vel, suscipit dignissimos! Quas, esse nulla molestiae incidunt earum non quis blanditiis animi, itaque illum laudantium quidem exercitationem!</p>
                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vitae, ullam rem explicabo quod voluptate ipsam natus quibusdam ipsa dolores quaerat nisi, laudantium doloremque nostrum impedit. Est qui neque ad earum!</p>
             </div>
             <span>
-                <img src="imgs/carousel_img_1.webp" alt="placeholder" class="carousel-img"></img>
-                <img src="imgs/carousel_img_2.webp" alt="placeholder" class="carousel-img"></img>
-                <img src="imgs/carousel_img_3.webp" alt="placeholder" class="carousel-img"></img>
+                <img src="imgs/carousel_img_1.webp" alt="carousel_img_1" class="carousel-img"></img>
+                <img src="imgs/carousel_img_2.webp" alt="carousel_img_2" class="carousel-img"></img>
+                <img src="imgs/carousel_img_3.webp" alt="carousel_img_3" class="carousel-img"></img>
             </span>
             <img src="imgs/arrow_mini_right.webp" alt="arrow_mini_right" class="navigation right"></img>
         </section>
