Working carousel img transition, quicker scroll

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vitae, ullam rem explicabo quod voluptate ipsam natus quibusdam ipsa dolores quaerat nisi, laudantium doloremque nostrum impedit. Est qui neque ad earum!</p>
             </div>
             <span>
-                <img src="imgs/carousel_img_1.webp" alt="carousel_img_1" class="carousel-img"></img>
+                <img src="imgs/carousel_img_1.webp" alt="carousel_img_1" class="carousel-img img-slide-down"></img>
                 <img src="imgs/carousel_img_2.webp" alt="carousel_img_2" class="carousel-img"></img>
                 <img src="imgs/carousel_img_3.webp" alt="carousel_img_3" class="carousel-img"></img>
             </span>
