--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <title>Checkm8</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/png" href="imgs/logo.webp">
+    <link rel="icon" type="image/png" href="imgs/logo.png">
     <link rel="stylesheet" href="style.css"></link>
     <script defer src="main.js"></script>
 </head>
@@ -28,9 +28,9 @@
             <main>
                 <b>00</b>
                 <div>
-                    <img src="imgs/logo.webp" alt="logo" class="logo"></img>
+                    <img src="imgs/logo.png" alt="logo" class="logo"></img>
                     <h1>Checkm8</h1>
-                    <img src="imgs/logo.webp" alt="logo" class="logo"></img>
+                    <img src="imgs/logo.png" alt="logo" class="logo"></img>
                 </div>
                 <hr>
                 <p></p>
@@ -42,28 +42,34 @@
         <section>
             <i>How It Works</i>
             <b>01</b>
-            <img src="imgs/arrow_mini_left.webp" alt="arrow_mini_left" class="navigation left"></img>
-            <div class="carousel-item">
-                <h2>Introduction</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam maxime commodi vitae consectetur quis, sint laborum consequuntur, aliquid vel nulla dolore ex nobis molestias rem dolores repudiandae similique, at magni expedita earum tempore tenetur odio blanditiis! Ipsum nisi aliquid, reprehenderit, aliquam sit eligendi dolore eos a unde, aspernatur magnam cupiditate.</p>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Illum, nemo! Officiis culpa provident neque assumenda? Minus, dolores ullam. Illum ab ex vel nostrum non rerum officiis fugiat soluta totam minima.</p>
+            <img src="imgs/arrow_mini_left.png" alt="arrow_mini_left" class="navigation left"></img>
+            <div class="carousel">
+                <div class="carousel-titles">
+                    <h2 style="top: 0px">Introduction</h2>
+                    <h2 style="top: 100px">Technology Overview</h2>
+                    <h2 style="top: -100px">User Interaction</h2>
+                </div>
+                <div class="carousel-contents">
+                    <div>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam maxime commodi vitae consectetur quis, sint laborum consequuntur, aliquid vel nulla dolore ex nobis molestias rem dolores repudiandae similique, at magni expedita earum tempore tenetur odio blanditiis! Ipsum nisi aliquid, reprehenderit, aliquam sit eligendi dolore eos a unde, aspernatur magnam cupiditate.</p>
+                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Illum, nemo! Officiis culpa provident neque assumenda? Minus, dolores ullam. Illum ab ex vel nostrum non rerum officiis fugiat soluta totam minima.</p>
+                    </div>
+                    <div>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet, odit? Laudantium, facere aspernatur. Obcaecati, aut? Quod ut mollitia eligendi nihil enim commodi rem est accusamus voluptates eum! Labore aspernatur quae blanditiis quo reiciendis, incidunt voluptates eum iusto sint ab dolores, animi officia fugit soluta beatae rerum! Maiores autem nemo earum!</p>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore, quaerat possimus inventore rem deleniti non iste quibusdam praesentium sed dolorem esse nulla, pariatur, tenetur illo natus quod eos perspiciatis maiores!</p>
+                    </div>
+                    <div>
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Animi architecto quidem aut, placeat ratione, quaerat sunt velit necessitatibus recusandae voluptate perspiciatis atque omnis consectetur illo voluptatum provident facere vel, suscipit dignissimos! Quas, esse nulla molestiae incidunt earum non quis blanditiis animi, itaque illum laudantium quidem exercitationem!</p>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vitae, ullam rem explicabo quod voluptate ipsam natus quibusdam ipsa dolores quaerat nisi, laudantium doloremque nostrum impedit. Est qui neque ad earum!</p>
+                    </div>
+                </div>
             </div>
-            <div class="carousel-item">
-                <h2>Technology Overview</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet, odit? Laudantium, facere aspernatur. Obcaecati, aut? Quod ut mollitia eligendi nihil enim commodi rem est accusamus voluptates eum! Labore aspernatur quae blanditiis quo reiciendis, incidunt voluptates eum iusto sint ab dolores, animi officia fugit soluta beatae rerum! Maiores autem nemo earum!</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore, quaerat possimus inventore rem deleniti non iste quibusdam praesentium sed dolorem esse nulla, pariatur, tenetur illo natus quod eos perspiciatis maiores!</p>
-            </div>
-            <div class="carousel-item">
-                <h2>User Interaction</h2>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Animi architecto quidem aut, placeat ratione, quaerat sunt velit necessitatibus recusandae voluptate perspiciatis atque omnis consectetur illo voluptatum provident facere vel, suscipit dignissimos! Quas, esse nulla molestiae incidunt earum non quis blanditiis animi, itaque illum laudantium quidem exercitationem!</p>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vitae, ullam rem explicabo quod voluptate ipsam natus quibusdam ipsa dolores quaerat nisi, laudantium doloremque nostrum impedit. Est qui neque ad earum!</p>
-            </div>
-            <span>
-                <img src="imgs/carousel_img_1.webp" alt="carousel_img_1" class="carousel-img img-slide-down"></img>
-                <img src="imgs/carousel_img_2.webp" alt="carousel_img_2" class="carousel-img"></img>
-                <img src="imgs/carousel_img_3.webp" alt="carousel_img_3" class="carousel-img"></img>
+            <span class="carousel-imgs">
+                <img src="imgs/carousel_img_1.png" alt="carousel_img_1" class="slide-down"></img>
+                <img src="imgs/carousel_img_2.png" alt="carousel_img_2"></img>
+                <img src="imgs/carousel_img_3.png" alt="carousel_img_3"></img>
             </span>
-            <img src="imgs/arrow_mini_right.webp" alt="arrow_mini_right" class="navigation right"></img>
+            <img src="imgs/arrow_mini_right.png" alt="arrow_mini_right" class="navigation right"></img>
         </section>
         <section>
             <i>Pricing</i>
@@ -74,6 +80,6 @@
             <b>03</b>
         </section>
     </div>
-    <img src="imgs/arrow.webp" alt="arrow" id="return"></img>
+    <img src="imgs/arrow.png" alt="arrow" class="return"></img>
 </body>
 </html>
