More visual fixes

--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
             <img src="imgs/arrow_mini_left.png" alt="arrow_mini_left" class="navigation left"></img>
             <div class="carousel">
                 <div class="carousel-titles">
-                    <h2 style="top: 0px">Introduction</h2>
-                    <h2 style="top: 100px">Technology Overview</h2>
-                    <h2 style="top: -100px">User Interaction</h2>
+                    <h2 style="top: 0">Introduction</h2>
+                    <h2 style="top: 100%">Technology Overview</h2>
+                    <h2 style="top: -100%">User Interaction</h2>
                 </div>
                 <div class="carousel-contents">
                     <div>
@@ -65,9 +65,9 @@
                 </div>
             </div>
             <span class="carousel-imgs">
-                <img src="imgs/carousel_img_1.png" alt="carousel_img_1" class="slide-down"></img>
-                <img src="imgs/carousel_img_2.png" alt="carousel_img_2"></img>
-                <img src="imgs/carousel_img_3.png" alt="carousel_img_3"></img>
+                <img src="imgs/carousel_img_1.png" alt="carousel_img_1" style="top: 0"></img>
+                <img src="imgs/carousel_img_2.png" alt="carousel_img_2" style="top: 100%"></img>
+                <img src="imgs/carousel_img_3.png" alt="carousel_img_3" style="top: -100%"></img>
             </span>
             <img src="imgs/arrow_mini_right.png" alt="arrow_mini_right" class="navigation right"></img>
         </section>
