--- a/index.html
+++ b/index.html
@@ -50,17 +50,17 @@
                     <h2 style="top: -100%">User Interaction</h2>
                 </div>
                 <div class="carousel-contents">
-                    <div>
+                    <div style="left: 0">
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam maxime commodi vitae consectetur quis, sint laborum consequuntur, aliquid vel nulla dolore ex nobis molestias rem dolores repudiandae similique, at magni expedita earum tempore tenetur odio blanditiis! Ipsum nisi aliquid, reprehenderit, aliquam sit eligendi dolore eos a unde, aspernatur magnam cupiditate.</p>
                         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Illum, nemo! Officiis culpa provident neque assumenda? Minus, dolores ullam. Illum ab ex vel nostrum non rerum officiis fugiat soluta totam minima.</p>
                     </div>
-                    <div>
+                    <div style="left: 100%">
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet, odit? Laudantium, facere aspernatur. Obcaecati, aut? Quod ut mollitia eligendi nihil enim commodi rem est accusamus voluptates eum! Labore aspernatur quae blanditiis quo reiciendis, incidunt voluptates eum iusto sint ab dolores, animi officia fugit soluta beatae rerum! Maiores autem nemo earum!</p>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore, quaerat possimus inventore rem deleniti non iste quibusdam praesentium sed dolorem esse nulla, pariatur, tenetur illo natus quod eos perspiciatis maiores!</p>
                     </div>
-                    <div>
+                    <div style="left: -100%">
                         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Animi architecto quidem aut, placeat ratione, quaerat sunt velit necessitatibus recusandae voluptate perspiciatis atque omnis consectetur illo voluptatum provident facere vel, suscipit dignissimos! Quas, esse nulla molestiae incidunt earum non quis blanditiis animi, itaque illum laudantium quidem exercitationem!</p>
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vitae, ullam rem explicabo quod voluptate ipsam natus quibusdam ipsa dolores quaerat nisi, laudantium doloremque nostrum impedit. Est qui neque ad earum!</p>
+                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vitae, ullam rem explicabo quod voluptate ipsam natus quibusdam ipsa dolores quaerat nisi, laudantium doloremque nostrum impedit. Est qui neque ad earum!</p>
                     </div>
                 </div>
             </div>
